# look-at-the-cash-bubblin

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.json  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: example_for_google_spreadsheet.csv  poetry-instruction.md
config/: __init__.py  logging_setup.py  paths.py
data/: demo_ipko.csv  processed_income.csv  processed_transactions.csv
data_processing/: __init__.py  category.py  data_core.py  data_imports.py  data_loader.py  expense.py  exporter.py  location_processor.py  mappings.py  transaction_id.py
docs/: poetry-instruction.md  pre-commit-setup.md
tests/: README.md  conftest.py  test_category.py  test_data_core.py  test_data_imports.py  test_data_loader.py  test_exporter.py  test_exporter_import.py  test_integration.py  test_location_processor.py  test_logging_setup.py  test_main.py  test_mappings.py  test_performance.py  test_property_based.py  test_security.py
tests/integration/: __init__.py  test_export_integration.py  test_exporter_import.py  test_integration.py  test_large_dataset.py  test_main_workflow.py  test_pipeline_e2e.py
tests/performance/: __init__.py  conftest.py  test_clean_descriptions.py  test_csv_reading.py  test_dataframe_primitives.py  test_memory_footprint.py  test_performance.py  test_process_dataframe.py
tests/property_based/: __init__.py  strategies.py  test_clean_descriptions.py  test_pipeline_stateful.py  test_process_dataframe.py  test_property_based.py  test_stateful_pipeline.py
tests/security/: __init__.py  conftest.py  test_csv_injection.py  test_encoding.py  test_export_hardening.py  test_input_validation.py  test_logging_disclosure.py  test_path_traversal.py  test_resource_exhaustion.py  test_security.py
tests/unit/: test_category.py  test_data_contracts.py  test_data_core.py  test_data_imports.py  test_data_loader.py  test_expense.py  test_exporter.py  test_location_processor.py  test_logging_setup.py  test_main.py  test_mappings.py  test_observability.py  test_transaction_id.py
