[tool.poetry]
name = "look-at-the-cash-bubblin"
version = "0.1.0"
description = "A project for processing and analyzing transaction data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/darekwojciechowski/look-at-the-cash-bubblin"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-html = "^4.1.1"
pytest-timeout = "^2.3.1"
hypothesis = "^6.122.3"
black = "^25.1.0"
isort = "^7.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.0"
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["data_processing", "config"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
