[tool.poetry]
name = "look-at-the-cash-bubblin"
version = "0.1.0"
description = "A project for processing and analyzing transaction data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/darekwojciechowski/look-at-the-cash-bubblin"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-html = "^4.1.1"
pytest-timeout = "^2.3.1"
hypothesis = "^6.122.3"
black = "^25.1.0"
isort = "^7.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.0"
ruff = "^0.14.11"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Line length 120 for better readability (especially category.py with keyword sets)
line-length = 120
target-version = "py313"
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".venv",
    "build",
    "dist",
    "data_processing/category.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["data_processing", "config"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"data_processing/category.py" = ["E501"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["data_processing", "config"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
